@@ -1,3 +1,6 @@
+2006-03-07  Wolfgang Klinger  <wolfgang@stufenlos.net>
+
+	* Feature #2675: Cropscale for imgResources (thanks to Stefan Geith)
 
 2006-03-07  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
